# gpu_dfcc

./: .gitignore  CMakeLists.txt  Makefile.template  README.md  README.txt  __init__.py  __init__.py.in  ccsd.cu  ccsd.h  configure  do-configure  doc.rst  extras.py  gpu_dfcc.cu  gpuhelper.cu  gpuhelper.h  gpuhelper_driver.cc  gpuonly.h  pymodule.py  triples.cu
cmake/: autocmake_omp.cmake  gpu_dfccConfig.cmake.in
tests/: test_psiapi.py
tests/gpu_dfcc1/: output.ref
tests/gpu_dfcc2/: output.ref
